# agent-checkpoint

./: .gitignore  LICENSE  README.md  pyproject.toml
.github/workflows/: ci.yml  publish.yml
docs/: CAPABILITY_MANIFEST.md  SPEC.md  schema.json
examples/: demo.py
src/agent_checkpoint/: __init__.py  codec.py  factory.py  manager.py  manifest.py  models.py  storage.py  validator.py
tests/: test_codec.py  test_factory.py  test_manager.py  test_manifest.py
